<resources>
    <string name="app_name">SOS</string>
    <string name="search_emergency">Search Emergency</string>
    <string name="input_emergency">Input Emergency</string>
    <string name="todo">TODO</string>
    <string name="logo_description">Sahayyam</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_emergency_post">EmergencyPost</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_link_to_register">Register</string>
    <string name="minimum_password">Minimum Password Length is 8 characters.</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="email">Email</string>
    <string name="btn_link_to_login">Login</string>
    <!-- Strings related to drawer -->
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_upload_photo">Upload Photo</string>
    <string name="drawer_item_add_role">Add Role(s)</string>
    <string name="drawer_item_write_review">Write Review</string>
    <string name="drawer_item_glossary">Glossary</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_rateus">Rate Us</string>
    <string name="drawer_item_contactus">Contact Us</string>
    <string name="browse_for_uploads">Upload Photo</string>
    <string name="sign_out">Sign Out</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="post">Post</string>
    <string name="search_directory">Search Directory</string>

    <!--Strings related to Forget Password-->
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>





    <string-array name="roles">
        <item>General Manager</item>
        <item>Sr. DME</item>
        <item>DME</item>
        <item>Loco Inspector</item>
        <item>Private Hospital</item>
        <item>Govt. Hospital</item>
        <item>Police</item>
        <item>NGO,Club</item>
        <item>Doctors</item>
        <item>Ambulance</item>
        <item>Local Administration</item>
        <item>Station Master</item>
        <item>Dy. Station Superintendent</item>
        <item>Station Manager</item>
        <item>Junior Engineer(Telecommunication)</item>
        <item>Electrical official in-charge</item>
        <item>Gas Cutters</item>
        <item>Power Cutters</item>

    </string-array>
    <string-array name="appeal_type">
        <item>All</item>
        <item>Donation</item>
        <item>Adoption</item>
    </string-array>
    <string-array name="emergency_type">
        <item>Flood</item>
        <item>Fire</item>
        <item>Tsunami</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
