<?xml version="1.0" encoding="utf-8"?>






    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"

        android:orientation="vertical"
        tools:context=".LoginActivity"
        android:id="@+id/loginform">

        <android.support.v7.widget.Toolbar
            android:id="@+id/login1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/tab1"
            android:fitsSystemWindows="true"
            android:minHeight="?android:attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Login"
                android:textColor="@android:color/white"
                android:textSize="22dp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>



        <!--<ImageView-->
        <!--android:layout_width="@dimen/logo_w_h"-->
        <!--android:layout_height="@dimen/logo_w_h"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginBottom="30dp"-->
        <!--android:src="@mipmap/ic_launcher" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="50dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:textAppearanceSmall"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:background="@color/tab1"
            android:fontFamily="sans-serif"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/tab1"
            android:textSize="18sp" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/tab1"
            android:textSize="18sp" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    </LinearLayout>


